[tool.poetry]
name = "zbricklib-auth"
version = "0.1.0"
description = "Authentication system for zbricklib"
authors = ["zdeyn <zdeyn@zdeyn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zbricklib = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
